# auto-tiktok

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/auto_tiktok/: __init__.py  __main__.py  cli.py  cookies.py  patches.py  publisher.py
tests/: test_cookies.py
tests/fixtures/: no_tiktok_cookies.txt  sample_cookies.json  sample_cookies.txt
