[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-tiktok"
version = "0.1.0"
description = "A lean CLI that publishes videos to TikTok via Chrome automation + exported session cookies."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Jason" }]
keywords = ["tiktok", "automation", "cli", "playwright", "video", "upload"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "playwright>=1.40.0",
    "tiktok-uploader>=1.2.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
auto-tiktok = "auto_tiktok.cli:app"

[project.urls]
Homepage = "https://github.com/jasonwang/auto-tiktok"
Issues = "https://github.com/jasonwang/auto-tiktok/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_tiktok"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
